My Home: Prevent Double Border with Quick Links

--- a/client/my-sites/customer-home/cards/actions/quick-links/style.scss
+++ b/client/my-sites/customer-home/cards/actions/quick-links/style.scss
@@ -89,6 +89,10 @@
 			fill: var( --color-neutral-80 );
 		}
 	}
+
+	&:last-of-type {
+		box-shadow: 0 -1px 0 0px var( --color-border-subtle );
+	}
 }
 
 .quick-links__action-box-label {
